1st Project - Simple Todo API (CRUD + DTOs)

--- a/TodoApi/TodoApi/appsettings.json
+++ b/TodoApi/TodoApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LocalDbConnectionString": "Server=(localdb)\\MSSQLLocalDB; Database=TodoDb; Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=True;"
+  }
 }
